--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="content pure-g"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
