--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
       integrity="sha384-LTIDeidl25h2dPxrB2Ekgc9c7sEC3CWGM6HeFmuDNUjX76Ert4Z4IY714dhZHPLd"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/purecss@2.0.5/build/grids-responsive-min.css"
+    />
     <title>Vite App</title>
   </head>
   <body>
-    <div id="root" class="content pure-g"></div>
+    <div id="root" class="content pure-g app"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
