chore: Change document title

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://unpkg.com/purecss@2.0.5/build/grids-responsive-min.css"
     />
-    <title>Vite App</title>
+    <title>Text Analyzer</title>
   </head>
   <body>
     <div id="root" class="content pure-g app"></div>
